--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gemini-mcp-tool",
-  "version": "1.1.4",
+  "name": "cat-gemini-mcp",
+  "version": "1.2.0",
   "description": "MCP server for Gemini CLI integration",
   "type": "module",
   "main": "dist/index.js",
@@ -31,12 +31,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jamubc/gemini-mcp-tool.git"
+    "url": "git+https://github.com/imWildCat/gemini-mcp-tool.git"
   },
   "bugs": {
-    "url": "https://github.com/jamubc/gemini-mcp-tool/issues"
+    "url": "https://github.com/imWildCat/gemini-mcp-tool/issues"
   },
-  "homepage": "https://github.com/jamubc/gemini-mcp-tool#readme",
+  "homepage": "https://github.com/imWildCat/gemini-mcp-tool#readme",
   "engines": {
     "node": ">=16.0.0"
   },
